todo checkbox circle visibility issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ span input {
 }
 
 .todo i {
-  color: #cccccc;
+  color: #ababab;
 }
 
 .todo-item::-moz-selection {
